codegen/ui_tests/rhai_fn_missing_value.stderr
error: requires value
  --> ui_tests/rhai_fn_missing_value.rs:11:11
   |
11 | #[rhai_fn(name)]
   |           ^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `test_module`
  --> ui_tests/rhai_fn_missing_value.rs:22:8
   |
22 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of unresolved module or unlinked crate `test_module`
   |
   = help: if you wanted to use a crate named `test_module`, use `cargo add test_module` to add it to your `Cargo.toml`
